# MBU_Databehandlingsaftaler

./: .pylintrc  README.md  main.py  pyproject.toml
.github/workflows/: Linting.yml
robot_framework/: __main__.py  config.py  error_screenshot.py  exceptions.py  initialize.py  process.py  queue_framework.py  reset.py
robot_framework/subprocesses/: helper_functions.py  overview_creation.py  queue_handling.py  queue_upload.py
