[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "databehandlingsrobot"
version = "1.2.0"

readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 1.*",
    "Pillow == 11.1.0",
    "selenium == 4.23.1",
    "pandas",
    "openpyxl",
    "requests",
    "tqdm",
]

[project.optional-dependencies]
dev = [
  "pandas",
  "openpyxl",
  "pylint",
  "flake8",
]